# BayesOmics

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  README.md
bench/: CMakeLists.txt
configure/: Makefile
include/: Data.hpp  Gadgets.hpp  Logger.hpp  Macro.hpp  Omics.hpp  Options.hpp  Stat.hpp  Utils.hpp
samples/pseudo/data/Cau/ind/: pseudo-1kg-chr22-cau-h2snp0.4-h2med-0.4-h2cis-0.6-model.bed  pseudo-1kg-chr22-cau-h2snp0.4-h2med-0.4-h2cis-0.6-model.betaTrue  pseudo-1kg-chr22-cau-h2snp0.4-h2med-0.4-h2cis-0.6-model.bim  pseudo-1kg-chr22-cau-h2snp0.4-h2med-0.4-h2cis-0.6-model.fam  pseudo-1kg-chr22-cau-h2snp0.4-h2med-0.4-h2cis-0.6-model.indlist  pseudo-1kg-chr22-cau-h2snp0.4-h2med-0.4-h2cis-0.6-model.pgen  pseudo-1kg-chr22-cau-h2snp0.4-h2med-0.4-h2cis-0.6-model.pheno  pseudo-1kg-chr22-cau-h2snp0.4-h2med-0.4-h2cis-0.6-model.plist  pseudo-1kg-chr22-cau-h2snp0.4-h2med-0.4-h2cis-0.6-model.psam  pseudo-1kg-chr22-cau-h2snp0.4-h2med-0.4-h2cis-0.6-model.pvar
samples/pseudo/data/Cau/summary/: pseudo-1kg-chr22-cau-h2snp0.4-h2med-0.4-h2cis-0.6-model.besd  pseudo-1kg-chr22-cau-h2snp0.4-h2med-0.4-h2cis-0.6-model.betaTrue  pseudo-1kg-chr22-cau-h2snp0.4-h2med-0.4-h2cis-0.6-model.eigen.gene.snp.info  pseudo-1kg-chr22-cau-h2snp0.4-h2med-0.4-h2cis-0.6-model.epi  pseudo-1kg-chr22-cau-h2snp0.4-h2med-0.4-h2cis-0.6-model.esi  pseudo-1kg-chr22-cau-h2snp0.4-h2med-0.4-h2cis-0.6-model.flist  pseudo-1kg-chr22-cau-h2snp0.4-h2med-0.4-h2cis-0.6-model.gsam  pseudo-1kg-chr22-cau-h2snp0.4-h2med-0.4-h2cis-0.6-model.ma  pseudo-1kg-chr22-cau-h2snp0.4-h2med-0.4-h2cis-0.6-model.sumstats
samples/pseudo/data/Cau/summary/pseudo-1kg-chr22-cau-h2snp0.4-h2med-0.4-h2cis-0.6-model-eigen/: block588.ldm.info  block588.snp.info  block589.ldm.info  block589.snp.info  block591.ldm.info  block591.snp.info  snp.info
samples/pseudo/data/CauPleIntNull/ind/: psuedo-1kg-chr22-cauPleIntNull-model.betaTrue  psuedo-1kg-chr22-cauPleIntNull-model.bim  psuedo-1kg-chr22-cauPleIntNull-model.ma.snplist  psuedo-1kg-chr22-cauPleIntNull-model.pheno  psuedo-1kg-chr22-cauPleIntNull-model.plist  psuedo-1kg-chr22-cauPleIntNull-model.psam  psuedo-1kg-chr22-cauPleIntNull-model.pvar  psuedo-1kg-chr22-cauPleIntNull-model.thetaTrue
samples/pseudo/data/CauPleIntNull/summary/: psuedo-1kg-chr22-cauPleIntNull-model.besd  psuedo-1kg-chr22-cauPleIntNull-model.betaTrue  psuedo-1kg-chr22-cauPleIntNull-model.eigen.gene.info  psuedo-1kg-chr22-cauPleIntNull-model.eigen.gene.snp.info  psuedo-1kg-chr22-cauPleIntNull-model.eigen.ldblock.info  psuedo-1kg-chr22-cauPleIntNull-model.eigen.ldblock.snp.info  psuedo-1kg-chr22-cauPleIntNull-model.epi  psuedo-1kg-chr22-cauPleIntNull-model.esi  psuedo-1kg-chr22-cauPleIntNull-model.flist  psuedo-1kg-chr22-cauPleIntNull-model.gsam  psuedo-1kg-chr22-cauPleIntNull-model.ma  psuedo-1kg-chr22-cauPleIntNull-model.sumstats
samples/pseudo/data/CauPleIntNull/summary/psuedo-1kg-chr22-cauPleIntNull-model-eigen/: ldm.info  snp.info
samples/pseudo/data/Ple/: pseudo-1kg-chr22-cau-h2snp0.5-h2med-0-h2cis-0.6-model-2025-05-02.rds
samples/pseudo/data/Ple/ind/: pseudo-1kg-chr22-cau-h2snp0.5-h2med-0-h2cis-0.6-model.bed  pseudo-1kg-chr22-cau-h2snp0.5-h2med-0-h2cis-0.6-model.betaTrue  pseudo-1kg-chr22-cau-h2snp0.5-h2med-0-h2cis-0.6-model.bim  pseudo-1kg-chr22-cau-h2snp0.5-h2med-0-h2cis-0.6-model.fam  pseudo-1kg-chr22-cau-h2snp0.5-h2med-0-h2cis-0.6-model.pgen  pseudo-1kg-chr22-cau-h2snp0.5-h2med-0-h2cis-0.6-model.pheno  pseudo-1kg-chr22-cau-h2snp0.5-h2med-0-h2cis-0.6-model.plist  pseudo-1kg-chr22-cau-h2snp0.5-h2med-0-h2cis-0.6-model.pvar  pseudo-1kg-chr22-cau-h2snp0.5-h2med-0-h2cis-0.6-model.thetaTrue
samples/pseudo/data/Ple/summary/: pseudo-1kg-chr22-cau-h2snp0.5-h2med-0-h2cis-0.6-model.besd  pseudo-1kg-chr22-cau-h2snp0.5-h2med-0-h2cis-0.6-model.betaTrue  pseudo-1kg-chr22-cau-h2snp0.5-h2med-0-h2cis-0.6-model.eigen.gene.info  pseudo-1kg-chr22-cau-h2snp0.5-h2med-0-h2cis-0.6-model.eigen.gene.snp.info  pseudo-1kg-chr22-cau-h2snp0.5-h2med-0-h2cis-0.6-model.eigen.ldblock.info  pseudo-1kg-chr22-cau-h2snp0.5-h2med-0-h2cis-0.6-model.epi  pseudo-1kg-chr22-cau-h2snp0.5-h2med-0-h2cis-0.6-model.esi  pseudo-1kg-chr22-cau-h2snp0.5-h2med-0-h2cis-0.6-model.flist  pseudo-1kg-chr22-cau-h2snp0.5-h2med-0-h2cis-0.6-model.gsam  pseudo-1kg-chr22-cau-h2snp0.5-h2med-0-h2cis-0.6-model.ma  pseudo-1kg-chr22-cau-h2snp0.5-h2med-0-h2cis-0.6-model.ma.snplist  pseudo-1kg-chr22-cau-h2snp0.5-h2med-0-h2cis-0.6-model.sumstats
samples/pseudo/data/Ple/summary/pseudo-1kg-chr22-cau-h2snp0.5-h2med-0-h2cis-0.6-model-eigen/: ldm.info  snp.info
samples/pseudo/data/genotype/: psuedo-1kg-chr22-cauPleIntNull-model.bim
src/: CMakeLists.txt  Data.cpp  DataManagement.cpp  DataOmics.cpp  DataSOmics.cpp  Eigen.cpp  Gadgets.cpp  Logger.cpp  Main.cpp  Omics.cpp  Options.cpp  Stat.cpp
